# ros2-llm-clip-scene-graph-pipeline

ros2_scene_graph_ws/agent_sim/: package.xml  setup.cfg  setup.py
ros2_scene_graph_ws/agent_sim/agent_sim/: agent_path.py  agent_sim_node.py
ros2_scene_graph_ws/config/: dynablox_params.yaml  ib_params.yaml  lp2_params.yaml  scene_config.yaml
ros2_scene_graph_ws/eval/: evaluate_prediction.py
ros2_scene_graph_ws/perception_oracle/: package.xml  setup.cfg  setup.py
ros2_scene_graph_ws/perception_oracle/perception_oracle/: clip_utils.py  perception_oracle_node.py
ros2_scene_graph_ws/scene_graph_builder/: package.xml  setup.cfg  setup.py
ros2_scene_graph_ws/scene_graph_builder/scene_graph_builder/: ib_utils.py  scene_graph_builder_node.py
ros2_scene_graph_ws/src/scene_graph_msgs/: CMakeLists.txt  package.xml
ros2_scene_graph_ws/src/scene_graph_msgs/msg/: DynamicFlags.msg  ObjectEmbeddings.msg  SceneGraph.msg  SceneObject.msg  TrajectoryHeatmap.msg
ros2_scene_graph_ws/synthetic_scene/: package.xml  setup.cfg  setup.py
ros2_scene_graph_ws/synthetic_scene/synthetic_scene/: open3d_renderer.py  pointcloud_utils.py  scene_loader.py  synthetic_node.py
ros2_scene_graph_ws/trajectory_predictor/: package.xml  setup.cfg  setup.py
ros2_scene_graph_ws/trajectory_predictor/trajectory_predictor/: ctmc_utils.py  llm_utils.py  trajectory_predictor_node.py
scripts/: run_full_system.sh
